crates/uitest/fixtures/ty/def/associated_types.snap
---
source: crates/uitest/tests/ty.rs
expression: diags
input_file: fixtures/ty/def/associated_types.fe
---
error[2-0002]: `Output` is not found
  ┌─ associated_types.fe:4:39
  │
4 │     fn add(self, _ other: T) -> Self::Output // TODO: fix 'not found' error
  │                                       ^^^^^^ `Output` is not found

error[6-0001]: given trait argument number mismatch
   ┌─ associated_types.fe:11:6
   │
11 │ impl Add<u16> for Val {
   │      ^^^^^^^^ expected 2 arguments here, but 1 given
